Fixing Findbugs issues.