@@ -237,7 +237,7 @@ public class JBInstantiatingIterator implements WizardDescriptor.InstantiatingIt
         WizardDescriptor.Panel result = getPanels()[index];
         JComponent component = (JComponent)result.getComponent();
         component.putClientProperty("WizardPanel_contentData", getSteps());  // NOI18N
-        component.putClientProperty("WizardPanel_contentSelectedIndex", new Integer(getIndex()));// NOI18N
+        component.putClientProperty("WizardPanel_contentSelectedIndex", Integer.valueOf(getIndex()));// NOI18N
         return result;
     }
     
